--- a/OcalimochoApp/app/src/main/res/layout/activity_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_casilla.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.cokepedreira.ocalimochoapp.casilla1">
+    tools:context="com.example.cokepedreira.ocalimochoapp.Tablero">
 
     <TextView
         android:layout_width="250dp"
@@ -48,7 +48,6 @@
         android:layout_height="wrap_content"
         android:text="ok"
         android:id="@+id/button2"
-        android:onClick="siguientejugador"
         android:layout_alignTop="@+id/jugador"
         android:layout_toRightOf="@+id/textView"
         android:layout_toEndOf="@+id/textView" />
