Primera versión funcional completa del tablero.

--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -1,5 +1,45 @@
-<android.support.v4.view.ViewPager
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tablero_viewPager"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_margin="30dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/jugadorActual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="Jugador 1"/>
+
+        <Button
+            android:id="@+id/tirarDado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="Tirar dado"/>
+
+        <Button
+            android:id="@+id/siguienteJugador"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="10dp"
+            android:text="Siguiente jugador"/>
+
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/tablero_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
