--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -14,4 +14,14 @@
         android:gravity="center"
         android:text="POLLAS"/>
 
+    <TextView
+        android:id="@+id/listaJugadores"
+        style="?android:textAppearanceLarge"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Jugadores:"/>
+
+
 </LinearLayout>
