--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -1,58 +1,78 @@
-<LinearLayout
+<!-- A CardView that contains a TextView -->
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_alignParentTop="true">
+    android:layout_height="match_parent"
+    card_view:cardCornerRadius="4dp">
 
-
-    <TextView
-        android:id="@+id/nombreCasilla"
-        style="?android:textAppearanceLarge"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:gravity="center"
-        android:text="Nombre"/>
+        android:layout_alignParentTop="true">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/imagen"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:gravity="start"
-            android:contentDescription="Imagen de la casilla" />
+            <ImageView
+                android:id="@+id/imagen"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:gravity="start"
+                android:contentDescription="Imagen de la casilla"
+                android:layout_weight="0"/>
+
+            <TextView
+                android:id="@+id/nombreCasilla"
+                style="?android:textAppearanceLarge"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="Nombre"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
 
         <TextView
-
             android:id = "@+id/descripcion"
             style="?android:textAppearanceLarge"
             android:textStyle="bold"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="start"
+            android:padding="15dp"
             android:text="descripcion"/>
 
 
-    <TextView
-        android:id="@+id/listaJugadores"
-        style="?android:textAppearanceLarge"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Jugadores:"/>
+        <TextView
+            android:id="@+id/listaJugadores"
+            style="?android:textAppearanceLarge"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:padding="15dp"
+            android:text="Jugadores:"/>
 
 
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/accion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="iniciar"/>
+        <Button
+            android:layout_marginTop="20dp"
+            android:id="@+id/accion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="iniciar"/>
 
 
 
+    </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
