--- a/OcalimochoApp/app/src/main/res/layout/activity_seleccion_jugadores.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_seleccion_jugadores.xml
@@ -8,7 +8,8 @@
         android:id="@+id/root_view"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
