--- a/OcalimochoApp/app/src/main/res/layout/activity_seleccion_jugadores.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_seleccion_jugadores.xml
@@ -1,19 +1,38 @@
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_view"
     android:layout_height="match_parent"
-    android:layout_width="match_parent" >
+    android:layout_width="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/root_view"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.example.cokepedreira.ocalimochoapp.SeleccionJugadores">
-    </LinearLayout>
+    <ScrollView
+        android:id="@+id/players_selection_scroll_view"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent" >
 
-</ScrollView>
+        <LinearLayout
+            android:id="@+id/text_views_view"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context="com.example.cokepedreira.ocalimochoapp.SeleccionJugadores">
+
+
+            <Button
+                android:id="@+id/start_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Comenzar"/>
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
+</LinearLayout>
+
