--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -7,8 +7,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/tablero_viewPager"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_margin="15dp"/>
+        android:layout_height="400dp" />
 
 
     <LinearLayout
