--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:scrollbars="vertical">
+    android:scrollbars="vertical"
+    android:padding="15dp">
 
 
     <android.support.v7.widget.CardView
@@ -91,7 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="iniciar"
-                        android:gravity="center_vertical" />
+                        android:gravity="center" />
 
                 </LinearLayout>
 
