--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -13,12 +13,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="8dp"
-        android:nestedScrollingEnabled="true">
+        card_view:cardElevation="3dp">
 
         <ScrollView
             android:layout_width="match_parent"
