--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -22,105 +22,124 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/card_view_linear_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_alignParentTop="true">
-
             <LinearLayout
+                android:id="@+id/card_view_linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp"
-                android:gravity="left">
+                android:orientation="vertical"
+                android:gravity="center"
+                android:paddingBottom="15dp" >
 
-                <TextView
-                    android:id="@+id/nombreCasilla"
-                    style="?android:textAppearanceLarge"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="left|end"
-                    android:text="Nombre"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:id="@+id/posicionCasilla"
-                    style="?android:textAppearanceLarge"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right|end"
-                    android:text="posicion"
-                    android:layout_weight="1"/>
-
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="3dp"
-                android:background="@android:color/black"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="15dp"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:id="@+id/imagen"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:gravity="start"
-                    android:contentDescription="Imagen de la casilla"
-                    android:layout_weight="0"/>
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center">
+                    android:orientation="horizontal"
+                    android:padding="15dp"
+                    android:gravity="left">
 
-                    <Button
-                        android:id="@+id/accion"
+                    <TextView
+                        android:id="@+id/nombreCasilla"
+                        style="?android:textAppearanceLarge"
+                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="iniciar"
-                        android:gravity="center" />
+                        android:gravity="left|end"
+                        android:text="Nombre"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/posicionCasilla"
+                        style="?android:textAppearanceLarge"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right|end"
+                        android:text="posicion"
+                        android:layout_weight="1"/>
+
 
                 </LinearLayout>
 
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="3dp"
+                    android:background="@android:color/black"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="15dp"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/imagen"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:gravity="start"
+                        android:contentDescription="Imagen de la casilla"
+                        android:layout_weight="0"/>
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
+
+                        <Button
+                            android:id="@+id/accion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="iniciar"
+                            android:gravity="center" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:text="Descripción"/>
+
+                <TextView
+                    android:id = "@+id/descripcion"
+                    style="?android:textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:paddingBottom="15dp"
+                    android:text="Texto de la descripción"/>
+
+
+                <TextView
+                    android:id="@+id/tituloListaJugadores"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:text="Jugadores en la casilla"/>
+                <TextView
+                    android:id="@+id/listaJugadores"
+                    style="?android:textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="start"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    android:textSize="15sp"
+                    android:text="Lista de jugadores"/>
+
             </LinearLayout>
-
-
-            <TextView
-                android:id = "@+id/descripcion"
-                style="?android:textAppearanceLarge"
-                android:textSize="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="15dp"
-                android:text="descripcion"/>
-
-            <TextView
-                android:id="@+id/listaJugadores"
-                android:hint="kaljsdf"
-                style="?android:textAppearanceLarge"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="start"
-                android:padding="15dp"
-                android:textSize="16dp"/>
-
-
-
-        </LinearLayout>
-
         </ScrollView>
     </android.support.v7.widget.CardView>
 </LinearLayout>
