--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -4,16 +4,18 @@
     android:layout_width="match_parent"
     android:orientation="vertical" >
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/tablero_viewPager"
+    <com.bartoszlipinski.flippablestackview.FlippableStackView
+        android:id="@+id/tablero_stack"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
-
+        android:layout_height="0dp"
+        android:padding="0dp"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center"
+        android:layout_marginBottom="15dp"
         android:orientation="horizontal">
 
         <Button
