--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -1,145 +1,128 @@
 <!-- A CardView that contains a TextView -->
-
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:scrollbars="vertical"
-    android:padding="15dp">
+    android:layout_height="match_parent">
 
-
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+    <LinearLayout
+        android:id="@+id/card_view_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="3dp">
+        android:orientation="vertical"
+        android:paddingBottom="15dp" >
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:gravity="start">
 
+            <TextView
+                android:id="@+id/nombreCasilla"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left|end"
+                android:text="Nombre"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/posicionCasilla"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right|end"
+                android:text="Posicion"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:layout_weight="1"/>
+
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="3dp"
+            android:background="@android:color/black"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imagen"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:gravity="start"
+                android:contentDescription="Imagen de la casilla"
+                android:layout_weight="0"/>
             <LinearLayout
-                android:id="@+id/card_view_linear_layout"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingBottom="15dp" >
+                android:gravity="center">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/accion"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="15dp"
-                    android:gravity="left">
-
-                    <TextView
-                        android:id="@+id/nombreCasilla"
-                        style="?android:textAppearanceLarge"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="left|end"
-                        android:text="Nombre"
-                        android:layout_weight="1"/>
-
-                    <TextView
-                        android:id="@+id/posicionCasilla"
-                        style="?android:textAppearanceLarge"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="right|end"
-                        android:text="posicion"
-                        android:layout_weight="1"/>
-
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="3dp"
-                    android:background="@android:color/black"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="15dp"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:id="@+id/imagen"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:gravity="start"
-                        android:contentDescription="Imagen de la casilla"
-                        android:layout_weight="0"/>
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center">
-
-                        <Button
-                            android:id="@+id/accion"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="iniciar"
-                            android:gravity="center" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:text="Descripción"/>
-
-                <TextView
-                    android:id = "@+id/descripcion"
-                    style="?android:textAppearanceLarge"
+                    android:text="iniciar"
                     android:textSize="15sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:paddingBottom="15dp"
-                    android:text="Texto de la descripción"/>
-
-
-                <TextView
-                    android:id="@+id/tituloListaJugadores"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:text="Jugadores en la casilla"/>
-                <TextView
-                    android:id="@+id/listaJugadores"
-                    style="?android:textAppearanceLarge"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="start"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:textSize="15sp"
-                    android:text="Lista de jugadores"/>
+                    android:gravity="center" />
 
             </LinearLayout>
-        </ScrollView>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Descripción"/>
+
+        <TextView
+            android:id = "@+id/descripcion"
+            style="?android:textAppearanceLarge"
+            android:textSize="19sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:paddingBottom="15dp"
+            android:text="Texto de la descripción"/>
+
+
+        <TextView
+            android:id="@+id/tituloListaJugadores"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Jugadores en la casilla"/>
+        <TextView
+            android:id="@+id/listaJugadores"
+            style="?android:textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:textSize="19sp"
+            android:text="Lista de jugadores"/>
+
+    </LinearLayout>
+
+</ScrollView>
