--- a/OcalimochoApp/app/src/main/res/layout/activity_main.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_view"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Comenzar"
-        android:id="@+id/b_comenzar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="comenzar"/>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/players_selection_scroll_view"
         android:layout_height="wrap_content"
-        android:id="@+id/et_num_jugadores"
-        android:layout_above="@+id/b_comenzar"
-        android:layout_centerHorizontal="true"
-        android:hint="Introduzca número de jugadores"
-        android:inputType="number" />
-</RelativeLayout>
+        android:layout_width="match_parent" >
+
+        <LinearLayout
+            android:id="@+id/text_views_view"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context="com.example.cokepedreira.ocalimochoapp.SeleccionJugadores">
+
+
+            <Button
+                android:id="@+id/start_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="Comenzar"
+                style="?android:attr/borderlessButtonStyle"/>
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/añadir_jugadores"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_action_new"
+            fab:fab_colorNormal="#009688"
+            fab:fab_colorPressed="@color/ColorPrimaryDark"
+            fab:fab_colorRipple="#9575CD"
+            />
+    </FrameLayout>
+
+
+
+</LinearLayout>
+
