--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -11,6 +11,17 @@
         android:padding="0dp"
         android:layout_weight="1"/>
 
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tablero_stack2"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp">
+
+
+    </android.support.v7.widget.CardView>
+
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -25,7 +36,8 @@
             android:gravity="center"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="Tirar dado"/>
+            android:text="Tirar dado"
+            style="?android:attr/borderlessButtonStyle"/>
 
     </LinearLayout>
 
