--- a/OcalimochoApp/app/src/main/res/values/styles.xml
+++ b/OcalimochoApp/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <item name="colorAccent">#009688</item>
+        <item name="colorPrimary">@color/ColorPrimary</item>
+        <item name="colorPrimaryDark">@color/ColorPrimaryDark</item>
+        <item name="android:textColor">#ffff</item>
+        <item name="android:color">#673AB7</item>
     </style>
 
 </resources>
