--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -4,23 +4,12 @@
     android:layout_width="match_parent"
     android:orientation="vertical" >
 
-    <com.bartoszlipinski.flippablestackview.FlippableStackView
-        android:id="@+id/tablero_stack"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/tablero_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="0dp"
         android:layout_weight="1"/>
-
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/tablero_stack2"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
-
-
-    </android.support.v7.widget.CardView>
 
     <LinearLayout
         android:layout_height="wrap_content"
