--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -1,145 +1,149 @@
 <!-- A CardView that contains a TextView -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <android.support.v7.widget.CardView
+        android:id="@+id/tablero_stack2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="30dp"
+        android:translationZ="2dp"
+        card_view:cardCornerRadius="2dp">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/tablero_stack2"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/card_view_linear_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            card_view:cardCornerRadius="4dp">
+            android:orientation="vertical"
+            android:paddingBottom="15dp">
 
             <LinearLayout
-                android:id="@+id/card_view_linear_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="15dp">
+                android:layout_height="72dp"
+                android:background="@color/ColorAccent"
+                android:gravity="start"
+                android:orientation="horizontal"
+                android:padding="15dp">
+
+
+                <TextView
+                    android:id="@+id/posicionCasilla"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:text="Pos"
+                    android:textColor="#424242"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/nombreCasilla"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="16dp"
+                    android:gravity="left|center_vertical"
+                    android:text="Nombre"
+                    android:textColor="#424242"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:orientation="horizontal"
-                    android:padding="15dp">
-
-                    <TextView
-                        android:id="@+id/nombreCasilla"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="left|end"
-                        android:text="Nombre"
-                        android:textColor="#000000"
-                        android:textSize="25sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/posicionCasilla"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="right|end"
-                        android:text="Posicion"
-                        android:textColor="#000000"
-                        android:textSize="25sp"
-                        android:textStyle="bold" />
-
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="3dp"
-                    android:background="@android:color/black" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:padding="15dp">
-
-                    <ImageView
-                        android:id="@+id/imagen"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_weight="0"
-                        android:contentDescription="Imagen de la casilla"
-                        android:gravity="start" />
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal"
+                        android:padding="15dp">
 
-                        <Button
-                            android:id="@+id/accion"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="iniciar"
-                            android:textSize="15sp" />
+                        <ImageView
+                            android:id="@+id/imagen"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:contentDescription="Imagen de la casilla"
+                            android:gravity="center" />
+
 
                     </LinearLayout>
 
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingEnd="15dp"
+                        android:paddingStart="15dp"
+                        android:text="Descripción"
+                        android:textColor="#EEEEEE"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/descripcion"
+                        style="?android:textAppearanceLarge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:paddingBottom="15dp"
+                        android:paddingEnd="15dp"
+                        android:paddingStart="15dp"
+                        android:text="Texto de la descripción"
+                        android:textColor="#EEEEEE"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tituloListaJugadores"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingEnd="15dp"
+                        android:paddingStart="15dp"
+                        android:text="Jugadores en la casilla"
+                        android:textColor="#EEEEEE"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/listaJugadores"
+                        style="?android:textAppearanceLarge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:paddingEnd="15dp"
+                        android:paddingStart="15dp"
+                        android:text="Lista de jugadores"
+                        android:textColor="#EEEEEE"
+                        android:textSize="14sp" />
+
                 </LinearLayout>
+            </ScrollView>
+
+            <Button
+                android:id="@+id/accion"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="iniciar"
+                android:textSize="14sp"
+
+                />
+        </LinearLayout>
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="15dp"
-                    android:paddingStart="15dp"
-                    android:text="Descripción"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/descripcion"
-                    style="?android:textAppearanceLarge"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:paddingBottom="15dp"
-                    android:paddingEnd="15dp"
-                    android:paddingStart="15dp"
-                    android:text="Texto de la descripción"
-                    android:textSize="19sp" />
-
-                <TextView
-                    android:id="@+id/tituloListaJugadores"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="15dp"
-                    android:paddingStart="15dp"
-                    android:text="Jugadores en la casilla"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/listaJugadores"
-                    style="?android:textAppearanceLarge"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="start"
-                    android:paddingEnd="15dp"
-                    android:paddingStart="15dp"
-                    android:text="Lista de jugadores"
-                    android:textSize="19sp" />
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-    </FrameLayout>
-
-</ScrollView>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
