--- a/OcalimochoApp/app/src/main/res/values/colors.xml
+++ b/OcalimochoApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ColorPrimary">#673AB7</color>
-    <color name="ColorPrimaryDark">#512DA8</color>
+    <color name="ColorPrimary">#3F51B5</color>
+    <color name="ColorPrimaryDark">#303F9F</color>
+    <color name="ColorAccent">#009688</color>
+    <color name="ColorAccentDark">#00796B</color>
+
 
 </resources>
